# biostats-anki

./: README.md  pyproject.toml  setup.py
anki-prompts/: generate_anki_cards_1.txt  generate_anki_cards_2.txt
biostats_anki/: __init__.py  __main__.py  builder.py  cli.py  converter.py  main.py  models.py  utils.py
biostats_anki.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
biostats_anki/anki-card-templates/: C1_biostats-phd_card.html  C2_biostats-phd_card.html  css-biostats-phd_card.css
